--- a/RecordEFCore/RecordEFCore/appsettings.json
+++ b/RecordEFCore/RecordEFCore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RecordDB": "Data Source=TIGER;Initial Catalog=RecordDB;Integrated Security=True;Connect Timeout=60;TrustServerCertificate=True;"
+  }
 }
