Add Docker support.

--- a/RecordEFCore/appsettings.json
+++ b/RecordEFCore/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RecordDB": "Data Source=TIGER;Initial Catalog=RecordDB;Integrated Security=True;Connect Timeout=60;TrustServerCertificate=True;"
+    "RecordDB": "Data Source=recorddb, 11433;database=RecordDB;user id =sa;password=MallaiG%47$;MultipleActiveResultSets=True;TrustServerCertificate=True;"
   }
 }
