Add paginaton to Artist index page.

--- a/RecordEFCore/appsettings.Development.json
+++ b/RecordEFCore/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  }//,
+  //"AllowedHosts": "*",
+  //"ConnectionStrings": {
+  //  "RecordDB": "Server=db;Database=RecordDB;User Id=SA;Password=MallaiG%47$;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+  //}
 }
